monitoring/alertmanager-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
  - alertmanager.lukeaddison.co.uk
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - match:
    - port: 8443
    route:
    - destination:
        host: alertmanager-operated
        port:
          number: 9093
